puzzles 1-3 compiles, starting glitch effect

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@ h1 {
   line-height: 0.9rem;
 }
 
-.text-line {
+.text-line, .loading-animation {
   color: $green;
   font-family: IBMVGA8, consolas, Charcoal, sans-serif;
   white-space: nowrap;
