found perfect glitch animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,8 @@ h1 {
   line-height: 0.9rem;
 }
 
-.text-line, .loading-animation {
+.text-line,
+.loading-animation {
   color: $green;
   font-family: IBMVGA8, consolas, Charcoal, sans-serif;
   white-space: nowrap;
@@ -64,5 +65,177 @@ h1 {
   &:active {
     outline: none;
     border: none;
+  }
+}
+
+.glitch {
+  animation-direction: alternate;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: glitch-anim-2;
+  animation-timing-function: linear;
+  display: block;
+  width: 100%;
+  background-image: url('https://esc-room-games.s3.us-west-1.amazonaws.com/Daffodil362/Assets/BG.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+}
+
+@keyframes glitch-anim-2 {
+  0% {
+    -webkit-clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
+    clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
+    opacity: 1;
+    -webkit-transform: translateZ(0) rotate(-2deg);
+    transform: translateZ(0) rotate(-2deg);
+  }
+
+  2% {
+    -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    -webkit-transform: translate(-5px) rotate(-2deg);
+    transform: translate(-5px) rotate(-2deg);
+  }
+
+  6% {
+    -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    -webkit-transform: translate(5px) rotate(-2deg);
+    transform: translate(5px) rotate(-2deg);
+  }
+
+  8% {
+    -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    -webkit-transform: translate(-5px) rotate(-2deg);
+    transform: translate(-5px) rotate(-2deg);
+  }
+
+  9% {
+    -webkit-clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    clip-path: polygon(0 78%, 100% 78%, 100% 100%, 0 100%);
+    -webkit-transform: translate(0) rotate(-2deg);
+    transform: translate(0) rotate(-2deg);
+  }
+
+  10% {
+    -webkit-clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
+    clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
+    -webkit-transform: translate3d(5px, 0, 0) rotate(-2deg);
+    transform: translate3d(5px, 0, 0) rotate(-2deg);
+  }
+
+  13% {
+    -webkit-clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
+    clip-path: polygon(0 54%, 100% 54%, 100% 44%, 0 44%);
+    -webkit-transform: translateZ(0) rotate(-2deg);
+    transform: translateZ(0) rotate(-2deg);
+  }
+
+  13.1% {
+    -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    -webkit-transform: translate3d(5px, 0, 0) rotate(-2deg);
+    transform: translate3d(5px, 0, 0) rotate(-2deg);
+  }
+
+  15% {
+    -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
+    clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
+    -webkit-transform: translate3d(5px, 0, 0) rotate(-2deg);
+    transform: translate3d(5px, 0, 0) rotate(-2deg);
+  }
+
+  20% {
+    -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
+    clip-path: polygon(0 60%, 100% 60%, 100% 40%, 0 40%);
+    -webkit-transform: translate3d(-5px, 0, 0) rotate(-2deg);
+    transform: translate3d(-5px, 0, 0) rotate(-2deg);
+  }
+
+  20.1% {
+    -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    -webkit-transform: translate3d(5px, 0, 0) rotate(-2deg);
+    transform: translate3d(5px, 0, 0) rotate(-2deg);
+  }
+
+  25% {
+    -webkit-clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
+    clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
+    -webkit-transform: translate3d(5px, 0, 0) rotate(-2deg);
+    transform: translate3d(5px, 0, 0) rotate(-2deg);
+  }
+
+  30% {
+    -webkit-clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
+    clip-path: polygon(0 85%, 100% 85%, 100% 40%, 0 40%);
+    -webkit-transform: translate3d(-5px, 0, 0) rotate(-2deg);
+    transform: translate3d(-5px, 0, 0) rotate(-2deg);
+  }
+
+  30.1% {
+    -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0) rotate(-2deg);
+  }
+
+  35% {
+    -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    -webkit-transform: translate(-5px) rotate(-2deg);
+    transform: translate(-5px) rotate(-2deg);
+  }
+
+  40% {
+    -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    -webkit-transform: translate(5px) rotate(-2deg);
+    transform: translate(5px) rotate(-2deg);
+  }
+
+  45% {
+    -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    -webkit-transform: translate(-5px) rotate(-2deg);
+    transform: translate(-5px) rotate(-2deg);
+  }
+
+  50% {
+    -webkit-clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    clip-path: polygon(0 63%, 100% 63%, 100% 80%, 0 80%);
+    -webkit-transform: translate(0) rotate(-2deg);
+    transform: translate(0) rotate(-2deg);
+  }
+
+  55% {
+    -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
+    clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
+    -webkit-transform: translate3d(5px, 0, 0) rotate(-2deg);
+    transform: translate3d(5px, 0, 0) rotate(-2deg);
+  }
+
+  60% {
+    -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
+    clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
+    opacity: 1;
+    -webkit-transform: translateZ(0) rotate(-2deg);
+    transform: translateZ(0) rotate(-2deg);
+  }
+
+  60.1% {
+    -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0) rotate(-2deg);
+    opacity: 1;
+  }
+
+  to {
+    -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0) rotate(-2deg);
+    opacity: 1;
   }
 }
