--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,7 @@ h1 {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 8vh;
+  height: 5rem;
   padding: 0 1rem;
   background-color: #333333;
   color: $green;
