how do you settimeout in a map? why impossible?

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,9 +38,10 @@ h1 {
   color: $green;
   font-family: IBMVGA8, consolas, Charcoal, sans-serif;
   white-space: nowrap;
-  font-size: 1.4rem;
+  font-size: 2rem;
   white-space: pre;
   line-height: 2rem;
+  margin-bottom: .5rem
 }
 
 .main-input {
