ch ch ch changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,24 +30,33 @@ h1 {
   color: $green;
   font-family: IBMVGA8, consolas, Charcoal, sans-serif;
   white-space: nowrap;
-  font-family: monospace;
   white-space: pre;
-  line-height: 0.9rem;
+  line-height: 0.8rem;
 }
 
 .blue-h1 {
   color: $blue;
   font-family: IBMVGA8, consolas, Charcoal, sans-serif;
   white-space: nowrap;
-  font-family: monospace;
   white-space: pre;
   line-height: 0.9rem;
+  font-size: 1.4rem;
 }
 
 .text-line,
 .loading-animation,
 a {
   color: $green;
+  font-family: IBMVGA8, consolas, Charcoal, sans-serif;
+  white-space: nowrap;
+  font-size: 2rem;
+  white-space: pre;
+  line-height: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.blue-loading {
+   color: $blue;
   font-family: IBMVGA8, consolas, Charcoal, sans-serif;
   white-space: nowrap;
   font-size: 2rem;
